# PMF-Benchmark

./: .gitattributes  .gitignore  LICENSE  PMF_benchmark_demo.db  README.md  data.dvc  markdown2pdf.py  models.xlsx  project_structure.md  pyproject.toml  random_forest_optuna.db  requirements.txt  results_log_0211.json  results_summary_0211.csv  run_experiments.sh  train.py
ER/: ER_calculation_final.py  ER_calculation_final_backup.py  ER_example.py  calculate_entropic_relevance_corrected.py  check_train_dfg_trans.py  comprehensive_ER.py  comprehensive_ER_example.py  evaluate_ER_example.py  evalute_ER.py  run_ER_final.py  utils_calculate_ER.py  visual_dfg_json.py  visual_transitions.py  visualize_er.py
ER_v2/: calculate_ER_template.py  run_all_er_calculation_v1.py  run_all_er_calculation_v2.py  task_1_visualize_dfg_v1.py  task_2_visualize_SDFA_v1.py  task_3_check_calculation_trace.py  utils_ER_v1.py  utils_ER_v2.py  utils_dfg_visualize.py
config/: base_config.yaml  preprocessing_config.yaml
configs/: config.yaml
models/: baseline_models.py  covariate_dl_models.py  covariate_regression_models.py  deep_learning_models.py  foundation_models.py  regression_models.py  statistical_models.py  univariate_dl_models.py  univariate_regression_models.py
notebooks/: calculate_drift.py  check_event_log_stats.ipynb  check_intermittency.ipynb  check_real_time_optuna.ipynb  check_theta_all_predictions.ipynb  evaluate_top_10.py  generate_final_results.ipynb  get_log_stats.py  plot_df_time_series.ipynb  time_series_example_plot.ipynb
preprocessing/: df_generator.py  event_log_processor.py  pattern_extractors.py  time_series_creator.py
results/: results_log.json
scripts/: preprocess_logs.py  run_experiments.sh
test/: run_regression_rtfmp.sh  (+1 more)
(+296 files in other folders)
