[project]
name = "pmf-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "darts>=0.29.0",
    "matplotlib>=3.9.4",
    "numpy>=1.19.0,<2.0.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "pm4py>=2.7.12.4",
    "torch>=2.5.1",
    "wandb>=0.19.1",
    "tables>=3.10.2",
    "lightgbm>=4.5.0",
    "prophet>=1.1.6",
]

